masonry posts layout

--- a/frontend/src/styles/abstracts/_variables.scss
+++ b/frontend/src/styles/abstracts/_variables.scss
@@ -1,10 +1,10 @@
-$breakpoint-sm: 576px;
+$breakpoint-sm: 476px;
 $breakpoint-md: 768px;
-$breakpoint-lg: 992px;
-$breakpoint-xl: 1200px;
+$breakpoint-lg: 1024px;
+$breakpoint-xl: 1280px;
 
-$text:#ECEDF1;
-$background:#0E0F17;
-$primary:#A2A6D2;
-$secondary:#2F367E;
-$accent:#4652CB;
+$text: #ecedf1;
+$background: #0e0f17;
+$primary: #a2a6d2;
+$secondary: #2f367e;
+$accent: #4652cb;
