--- a/frontend/src/styles/base/_typography.scss
+++ b/frontend/src/styles/base/_typography.scss
@@ -4,3 +4,30 @@ html {
   font-family: "Inter", sans-serif;
   color: $text;
 }
+
+h1 {
+  font-size: 2rem;
+  font-weight: 500;
+}
+h3 {
+  color: rgba($text, 0.66);
+  font-weight: 100;
+}
+
+// @include respond-to(small) {
+//   h1 {
+//     font-size: 4rem;
+//   }
+// }
+
+// @include respond-to(medium) {
+//   h1 {
+//     font-size: 6rem;
+//   }
+// }
+
+// @include respond-to(large) {
+//   h1 {
+//     font-size: 6rem;
+//   }
+// }
