--- a/frontend/src/styles/components/_post-component.module.scss
+++ b/frontend/src/styles/components/_post-component.module.scss
@@ -4,10 +4,12 @@
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  margin: 1em;
+  margin-bottom: 1em;
+  margin-left: 1em;
+  margin-right: 1em;
   padding: 1em;
   border-radius: 1vmin;
-  border: 0.15em solid rgba($text, 0.66);
+  border: 0.15em solid rgba($primary, 0.66);
   .text {
     max-width: 90%;
     h1 {
