--- a/frontend/src/styles/base/_typography.scss
+++ b/frontend/src/styles/base/_typography.scss
@@ -6,12 +6,16 @@ html {
 }
 
 h1 {
-  font-size: 2rem;
+  font-size: 2.5rem;
   font-weight: 500;
 }
 h3 {
-  color: rgba($text, 0.66);
+  font-size: 1.5rem;
+
   font-weight: 100;
+}
+p {
+  font-size: 1.2rem;
 }
 
 // @include respond-to(small) {
