--- a/frontend/src/styles/components/_post-component.module.scss
+++ b/frontend/src/styles/components/_post-component.module.scss
@@ -16,7 +16,11 @@
       padding-bottom: 0.2em;
     }
     h3 {
+      color: $text;
       padding-bottom: 0.3em;
+    }
+    p {
+      color: rgba($primary, 0.66);
     }
   }
   img {
