--- a/frontend/src/styles/base/_typography.scss
+++ b/frontend/src/styles/base/_typography.scss
@@ -5,6 +5,11 @@ html {
   color: $text;
 }
 
+label {
+  font-size: 1.6rem;
+  font-weight: 500;
+}
+
 h1 {
   font-size: 2.5rem;
   font-weight: 500;
