--- a/frontend/src/styles/layout/_navbar-component.module.scss
+++ b/frontend/src/styles/layout/_navbar-component.module.scss
@@ -30,9 +30,54 @@
 .modal {
   width: 100%;
   height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  input[type="text"] {
+    height: 2em;
+    width: 10em;
+    grid-column: 1;
+    grid-row: 1;
+    display: flex;
+    align-self: flex-end;
+    justify-self: center;
+  }
+  input[type="text"]::placeholder {
+    text-align: center;
+  }
+
+  textarea {
+    grid-column: 2/4;
+    grid-row: 1/3;
+    resize: none;
+  }
+  textarea::placeholder {
+    text-align: center;
+  }
+
+  input[type="file"] {
+    grid-column: 1;
+    grid-row: 3;
+    height: fit-content;
+    width: 8em;
+    display: flex;
+    align-self: flex-start;
+    justify-self: center;
+  }
+
+  button {
+    grid-column: 3;
+    grid-row: 3;
+    height: 2em;
+    width: 10em;
+    display: flex;
+    justify-self: flex-end;
+    align-self: flex-end;
+    justify-content: center;
+    align-items: center;
+    margin-right: 3em;
+    margin-bottom: 2em;
+  }
 }
 
 @include respond-to(small) {
