--- a/frontend/src/styles/components/_input-component.module.scss
+++ b/frontend/src/styles/components/_input-component.module.scss
@@ -10,7 +10,7 @@
 }
 input[type="file"] {
   border: none;
-  color: transparent;
+  //   color: transparent;
 }
 input[type="file"]::-webkit-file-upload-button {
   display: none;
