--- a/frontend/src/styles/layout/_navbar-component.module.scss
+++ b/frontend/src/styles/layout/_navbar-component.module.scss
@@ -47,6 +47,8 @@
   }
 
   textarea {
+    margin-top: 2em;
+    margin-right: 3em;
     grid-column: 2/4;
     grid-row: 1/3;
     resize: none;
@@ -60,6 +62,7 @@
     grid-row: 3;
     height: fit-content;
     width: 8em;
+    text-wrap: wrap;
     display: flex;
     align-self: flex-start;
     justify-self: center;
@@ -75,8 +78,8 @@
     align-self: flex-end;
     justify-content: center;
     align-items: center;
-    margin-right: 3em;
-    margin-bottom: 2em;
+    margin-right: 4em;
+    margin-bottom: 3em;
   }
 }
 
