adding post w/o image upload

--- a/frontend/src/styles/components/_input-component.module.scss
+++ b/frontend/src/styles/components/_input-component.module.scss
@@ -28,5 +28,5 @@ input[type="file"]::before {
   border-radius: 0.5vmin;
   outline: none;
   white-space: nowrap;
-  cursor: pointer;
+  cursor: default;
 }
