--- a/frontend/src/styles/layout/_navbar-component.module.scss
+++ b/frontend/src/styles/layout/_navbar-component.module.scss
@@ -28,18 +28,18 @@
 }
 
 .modal {
+  display: flex;
+  flex-direction: column;
   width: 100%;
   height: 100%;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
+
   input[type="text"] {
     height: 2em;
     width: 10em;
     grid-column: 1;
     grid-row: 1;
     display: flex;
-    align-self: flex-end;
+    align-self: center;
     justify-self: center;
   }
   input[type="text"]::placeholder {
@@ -47,8 +47,7 @@
   }
 
   textarea {
-    margin-top: 2em;
-    margin-right: 3em;
+    height: 10em;
     grid-column: 2/4;
     grid-row: 1/3;
     resize: none;
@@ -64,7 +63,7 @@
     width: 8em;
     text-wrap: wrap;
     display: flex;
-    align-self: flex-start;
+    align-self: center;
     justify-self: center;
   }
 
@@ -78,8 +77,6 @@
     align-self: flex-end;
     justify-content: center;
     align-items: center;
-    margin-right: 4em;
-    margin-bottom: 3em;
   }
 }
 
@@ -94,7 +91,7 @@
   p {
     position: absolute;
     top: 5em;
-    left: 5.3em;
+    left: 1em;
     width: 5em;
     color: rgba($primary, 0.66);
   }
@@ -109,7 +106,7 @@
 .toggleSwitch .toggleLabel {
   position: absolute;
   top: 2em;
-  left: 4.5em;
+  left: 1em;
   width: 40px;
   height: 24px;
   background-color: $primary;
@@ -148,10 +145,23 @@
 }
 
 @include respond-to(medium) {
-  .main {
-    flex-direction: row;
-    padding-left: 4em;
-    padding-right: 4em;
+  .modal {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    padding-left: 2em;
+    padding-right: 2em;
+    input[type="file"] {
+      align-self: flex-end;
+    }
+    textarea {
+      margin-top: 2em;
+      margin-right: 3em;
+    }
+    button {
+      margin-right: 4em;
+      margin-bottom: 3em;
+    }
     h1 {
       font-size: 6rem;
     }
@@ -159,9 +169,38 @@
       font-size: 7rem;
     }
   }
+  .toggleSwitch {
+    grid-column: 1;
+    grid-row: 3;
+    position: relative;
+    display: inline-block;
+    width: 40px;
+    height: 24px;
+    margin: 10px;
+    p {
+      position: absolute;
+      top: 5em;
+      left: 5.3em;
+      width: 5em;
+      color: rgba($primary, 0.66);
+    }
+  }
+  .toggleSwitch .toggleLabel {
+    position: absolute;
+    top: 2em;
+    left: 4.5em;
+    width: 40px;
+    height: 24px;
+    background-color: $primary;
+    border-radius: 34px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+  }
 }
 
 @include respond-to(large) {
   .main {
+    display: flex;
+    flex-direction: column;
   }
 }
